chore(format): reformat codebase with Spotless
Apply Palantir Java Format to all Java source files using Spotless.

Changes applied:
- Consistent code formatting according to Palantir style
- Removed unused imports
- Organized imports according to project convention
- Ensured all files have the proper Apache License 2.0 header

This is a large-scale formatting change affecting approximately 21,000
Java source files to establish a consistent code style baseline.